--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #FFE4E1;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
+/*.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}*/
+
+/*@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}*/
+.user{
+  margin-top: 30px;
+  margin-bottom: 20px;
+  background-color: rgba(228, 227, 224, 0.26);
+  width: 50%;
+  height: 100%;
+  padding: 30px;
+  border-radius: 5%;
+  border: dotted lightpink thin;
+}
+.user p{
+  margin-top: 15px;
+  color: rgb(41, 40, 40);
+  text-transform: uppercase;
+  font-family: 'Press Start 2P', cursive;
+  text-align: center;
+
+}
+
+/*.App-link {
   color: #61dafb;
 }
 
@@ -36,3 +52,4 @@
     transform: rotate(360deg);
   }
 }
+*/
